fix: disable facebook login
